--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@ body {
   min-height: 100vh;
   background-image: url(./assets/bg.jpg);
   background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* DESKTOP CONFIG */
@@ -103,33 +106,33 @@ body {
 }
 
 .coin1 {
-  position: fixed;
+  position: absolute;
   top: calc(100vh * 0.5);
   right: calc(100vh * 0.2);
   animation: spin 1.3s linear infinite;
 }
 .coin2 {
-  position: fixed;
+  position: absolute;
   top: calc(100vh * 0.8);
   right: calc(100vh * 1.55);
   animation: spin 1.6s linear infinite;
 }
 .coin3 {
-  position: fixed;
+  position: absolute;
   top: calc(100vh * 0.7);
   right: calc(100vh * 0.5);
   animation: spin 1.8s linear infinite;
 }
 .coin4 {
-  position: fixed;
+  position: absolute;
   top: calc(100vh * 0.7);
   right: calc(100vh * 1.5);
   animation: spin 1.8s linear infinite;
 }
 .coin5 {
-  position: fixed;
+  position: absolute;
   top: calc(100vh * 0.6);
-  right: calc(100vh * 0.9);
+  right: calc(100vh * 1.3);
   animation: spin 1.8s linear infinite;
 }
 
