--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ body {
 }
 
 .hero-invite h1 {
-  color: #bcf147;
+  color: #ffeb3b;
+  font-size: 8vh !important;
 }
 
 .hero-invite {
@@ -97,12 +98,13 @@ body {
 }
 
 .nav-link {
-  color: rgb(206, 205, 205) !important;
+  color: rgb(255, 255, 255) !important;
   font-size: 18px;
 }
 
 .span-desc {
-  color: rgb(179, 177, 177) !important;
+  color: rgb(255, 255, 255) !important;
+  text-align: center;
 }
 
 .coin1 {
@@ -146,4 +148,8 @@ body {
   100% {
     transform: translate(0px, 0px);
   }
+}
+
+.bg-dark {
+  background: #040501;
 }
